# fastlog

./: .gitignore  CMakeLists.txt  README.md  fastlog_test  parser.cpp
.github/workflows/: ci.yml
docs/: TRACKS.md  WORK_ASSIGNMENT.md
include/fastlog/: types.h
log generator/: generator.cpp
src/: main.cpp
